[NOISSUE] adapted user api and added wiremock's for client testing
